src/ggrc/assets/stylesheets/_layout.scss
/*
 * Copyright (C) 2013 Google Inc., authors, and contributors <see AUTHORS file>
 * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 * Created By: brad@reciprocitylabs.com
 * Maintained By: brad@reciprocitylabs.com
 */

// container size
.container-fluid {
  margin:0 auto;
  &.resizable {
    @include transition(width 0.2s);
  }
}

// placeholder for widgets drag and drop
.drop-placeholder {
  background:$dropPlaceholder;
  border:1px dotted $gray;
  height:24px;
  line-height:24px;
  font-size: $f-regular;
  font-weight: bold;
  @include border-radius($default-border-radius);
  text-align: center;
  &:before {
    content:"Drop Here";
  }
  color: $darkGray;
}

.lhs-holder {
  position: fixed;
  top: 176px;
  left: -240px;
  width: 240px;
  height: 500px;
  overflow-y: auto;
  background: $white;
  &.active {
    @include box-shadow(2px 2px 4px rgba(0,0,0, 0.1));
  }
}

.lhn-type {
  position: fixed;
  top: 142px;
  left: -246px;
  &.active {
    @include box-shadow(2px 2px 4px rgba(0,0,0, 0.05), 2px -2px 4px rgba(0,0,0, 0.05));
  }
}

.area {
  margin-left:0px;
}
.header-content {
  height:47px;
  line-height:47px;
  position:fixed;
  top: 48px;
  width:100%;
  border-bottom: 1px solid $headerBorder;
}
/* Inner nav dont exist anymore. It is moved up to top-inner-nav
.inner-nav {
  width:200px;
  height:445px;
  position:fixed;
  top:80px;
  overflow-y:auto;
  overflow-x:hidden;
}
*/
.top-inner-nav {
  width: 100%;
  position: fixed;
  z-index: 1;
  top: 96px;
  background: $tabBgnd;
  @include box-shadow(inset 1px 4px 9px -6px rgba(0,0,0,0.4));
}
.object-area {
  position:fixed;
  top: 126px;
  overflow-y:auto;
  overflow-x:hidden;
  height:445px;
  padding-top: 20px;
  background: $contentBgnd;
  &.import-area {
    margin-left:0;
    .widget {
      .content {
        display: block !important;
      }
    }
  }
  &.dashboard-area {
    margin-left:0;
  }
}

.inner-content {
  .side-wrap & {
    margin-left: 40px;
  }
  .content-wrap & {
    margin-right: 40px;
  }
  .full-width & {
    margin-left: 40px;
    margin-right: 40px;
  }
}

.footer {
  margin-top:500px;
  overflow:hidden;
}

